# turbo_song_ameliorator

./: Cargo.toml  README.md  build.sh  test_make_melody.mid
assets/generation/: test_make_melody.mid
assets/melody/: Final_Fantasy_combat.mid  Touhou_flowering_night.mid  bleach_op6_alones.mid  castlevania_bloody_tears.mid  crypt_of_the_necrodancer_disco_descent.mid  dofus_combat.mid  fairy_tail_part1.mid  fairy_tail_part2.mid  longing_SAO.mid  magalovania_part2.mid  mario_kart_electrodrome.mid  megalovania_part1.mid  nanatsu_no_taizai_op1.mid  no_game_no_life _op.mid  phoenotopia_boss2.mid  pif1.mid  pif2.mid  pif3.mid  pif4.mid  pif5.mid  pif6.mid  pif7.mid  pif8.mid  pokemon_center_theme.mid  pokemon_johto_op3.mid  pokemon_op11_nous_serons_des_heros.mid  pokemon_op14.mid  pokemon_op8_invincible.mid  soul_knight_glacier.mid  undertale_his_theme.mid
assets/sound examples/: testmidi.mid
interface/Godot/: .gdextension  default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot
interface/Godot/resources/: SAW_A.mp3.import
interface/Godot/resources/shaders/: visualizer.gdshader
interface/Godot/src/: GenerationData.gd
src/: analysis_file_utils.rs  file_import.rs  lib.rs  main.rs  rythm_analyser.rs
src/Analyser/: mod.rs
src/Generator/: markov.rs  utils.rs
src/analyser/: mod.rs  rhythm_analysis.rs  tonal_analysis.rs  volume_analysis.rs
src/analysis_data/: analysis_data.rs  mod.rs
src/generator/: midi_gen.rs  mod.rs
src/generator/algorithms/: dice.rs  markov.rs  mod.rs  percu.rs
src/utils/: analysis_file.rs  file_import.rs  mod.rs  notes.rs
(+52 files in other folders)
