[package]
name = "turbo_song_ameliorator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = "0.16.0" #for general dsp
cpal = "0.15.2" #for realtime audio stream (?)
#midir = "0.9.1" #for realtime midi processing
midly = "0.5.3" #for offline midi processing